--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,10 @@
 <resources>
     <string name="app_name">Дневник тренировок</string>
     <string name="main_window_title">Тренировки</string>
+    <string name="history_title">История</string>
+    <string name="history_list_item_name">Название тренировки</string>
+    <string name="history_list_item_date">дд.мм.гггг</string>
+    <string name="empty_string"/>
 
     <string-array name="trainings">
         <item>Тренировка 1</item>
@@ -17,7 +21,22 @@
         <item>Тренировка 11</item>
         <item>Тренировка 12</item>
     </string-array>
-    
+    <string-array name="trainings_part1">
+        <item>Тренировка 1</item>
+        <item>Тренировка 2</item>
+        <item>Тренировка 3</item>
+        <item>Тренировка 4</item>
+        <item>Тренировка 5</item>
+    </string-array>
+
+    <string-array name="trainings_part2">
+    <item>Тренировка 1</item>
+    <item>Тренировка 2</item>
+    <item>Тренировка 3</item>
+    <item>Тренировка 4</item>
+    <item>Тренировка 5</item>
+</string-array>
+
     <string-array name="exercises">
         <item>Упражнение 1</item>
         <item>Упражнение 2</item>
