--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="history_list_item_name">Название тренировки</string>
     <string name="history_list_item_date">дд.мм.гггг</string>
     <string name="empty_string"/>
+    <string name="n">0</string>
+    <string name="workoutName">Тренировка</string>
+    <string name="main_title">Тренировки</string>
 
     <string-array name="trainings">
         <item>Тренировка 1</item>
