--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,8 +7,9 @@
     <string name="history_list_item_date">дд.мм.гггг</string>
     <string name="empty_string"/>
     <string name="n">0</string>
-    <string name="workoutName">Тренировка</string>
+    <string name="workout_name">Тренировка</string>
     <string name="main_title">Тренировки</string>
+    <string name="workout_creation">Создание тренировки</string>
     <string name="dlg_workout_name">Название тренировки</string>
     <string name="dlg_set">Подход</string>
     <string name="dlg_kg">Вес</string>
@@ -37,12 +38,12 @@
     </string-array>
 
     <string-array name="trainings_part2">
-    <item>Тренировка 1</item>
-    <item>Тренировка 2</item>
-    <item>Тренировка 3</item>
-    <item>Тренировка 4</item>
-    <item>Тренировка 5</item>
-</string-array>
+        <item>Тренировка 1</item>
+        <item>Тренировка 2</item>
+        <item>Тренировка 3</item>
+        <item>Тренировка 4</item>
+        <item>Тренировка 5</item>
+    </string-array>
 
     <string-array name="exercises">
         <item>Упражнение 1</item>
