Кнопка: начать тренировку.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="kg">кг</string>
     <string name="times">раз</string>
     <string name="weight">Вес:</string>
+    <string name="workout_start">Начать</string>
 
     <string-array name="trainings">
         <item>Тренировка 1</item>
