--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,9 @@
     <string name="empty_string"/>
     <string name="workout_name">Тренировка</string>
     <string name="workout_creation">Создание тренировки</string>
+    <string name="workout_start">Начать</string>
     <string name="exercise_name">Упражнение</string>
+    <string name="exercises_list">Упражнения</string>
     <string name="main_title">Тренировки</string>
     <string name="dlg_workout_name">Введите название</string>
     <string name="dlg_set">Введите параметры</string>
@@ -18,7 +20,6 @@
     <string name="kg">кг</string>
     <string name="times">раз</string>
     <string name="weight">Вес:</string>
-    <string name="workout_start">Начать</string>
 
     <string-array name="trainings">
         <item>Тренировка 1</item>
