--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="times">раз</string>
     <string name="weight">Вес:</string>
     <string name="help_title">Помощь</string>
+    <string name="ok">Ок</string>
+    <string name="cancel">Отмена</string>
+    <string name="training_name">Название тренировки</string>
 
     <string-array name="trainings">
         <item>Тренировка 1</item>
