--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="ok">Ок</string>
     <string name="cancel">Отмена</string>
     <string name="training_name">Название тренировки</string>
+    <string name="training_creating">Создание тренировки</string>
 
     <string-array name="trainings">
         <item>Тренировка 1</item>
