Better layout on exercise info screen

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="workout_start">Начать</string>
     <string name="exercise_name">Упражнение</string>
     <string name="exercises_list">Упражнения</string>
+    <string name="exercise_info">Описание упражнения</string>
     <string name="main_title">Тренировки</string>
     <string name="dlg_workout_name">Введите название</string>
     <string name="dlg_set">Введите параметры</string>
@@ -25,6 +26,7 @@
     <string name="cancel">Отмена</string>
     <string name="training_name">Название тренировки</string>
     <string name="training_creating">Создание тренировки</string>
+
 
     <string-array name="trainings">
         <item>Тренировка 1</item>
