--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,10 +22,12 @@
     <string name="times">раз</string>
     <string name="weight">Вес:</string>
     <string name="help_title">Помощь</string>
+    <string name="help_text">Приходит из самых неожиданных источников.</string>
     <string name="ok">Ок</string>
     <string name="cancel">Отмена</string>
     <string name="training_name">Название тренировки</string>
     <string name="training_creating">Создание тренировки</string>
+    <string name="sets_creating">Добавление подходов</string>
 
 
     <string-array name="trainings">
