Finished: training creating

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="dlg_kg">Вес</string>
     <string name="dlg_reps">Повторения</string>
     <string name="reiterations">Повторений:</string>
+    <string name="sets_short">Повтор.:</string>
     <string name="kg">кг</string>
     <string name="times">раз</string>
     <string name="weight">Вес:</string>
