--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="weight">Вес:</string>
     <string name="help_title">Помощь</string>
     <string name="help_text">Приходит из самых неожиданных источников.</string>
-    <string name="ok">Ок</string>
+    <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
     <string name="training_name">Название тренировки</string>
     <string name="training_creating">Создание тренировки</string>
